<resources>
    <string name="app_name">Учёт покупок</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_fio">ФИО</string>
    <string name="hint_confirm">Повторите пароль</string>
    <string name="btn_sign_in">Войти</string>
    <string name="btn_sign_up">Зарегистрироваться</string>
    <string name="link_sign_up">Создать аккаунт</string>
    <string name="title_balance">Остаток бюджета</string>
    <string name="title_today_purchases">Покупки за сегодня</string>
    <string name="title_analytics">Аналитика покупок</string>
    <string name="no_purchases_today">На сегодня покупок нет</string>
    <string name="title_add">Добавить покупку</string>
    <string name="hint_product">Название продукта</string>
    <string name="hint_category">Категория</string>
    <string name="hint_quantity">Кол-во</string>
    <string name="hint_price">Цена, ₽</string>
    <string name="hint_shop">Магазин</string>
    <string name="hint_home">Главная</string>
    <string name="hint_purchases">Покупки</string>
    <string name="hint_profile">Профиль</string>
    <string name="hint_date">Дата</string>
    <string name="btn_save">Сохранить</string>
    <string name="btn_logout">Выйти</string>
    <string name="fab_add_purchase">Добавить покупку</string>
    <string name="setLimitText">Установить лимит</string>
    <string name="hint_bd">Дата рождения</string>
    <string name="limit_exceeded">Превышен лимит!</string>
    <string name="balance_remaining">Остаток: %1$s ₽</string>
    <string name="title_purchases_today">Покупки за выбранный день</string>
    <string name="no_purchases_day">Нет покупок за %1$s</string>
    <string name="current_month">Текущий месяц</string>
    <string name="prev_month">Предыдущий месяц</string>
    <string name="next_month">Следующий месяц</string>
    <string name="day_mon">Пн</string>
    <string name="day_tue">Вт</string>
    <string name="day_wed">Ср</string>
    <string name="day_thu">Чт</string>
    <string name="day_fri">Пт</string>
    <string name="day_sat">Сб</string>
    <string name="day_sun">Вс</string>
    <string name="hint_note">Заметка</string>
    <string name="hint_completed">Статус</string>
    <string name="select_date">Выбрать дату</string>
    <string name="btn_save_purchase">Сохранить покупку</string>
    <string name="btn_cancel">Отмена</string>
    <string name="product_helper">Выберите продукт или введите название нового</string>
    <string name="category_helper">Выберите категорию</string>
    <string name="shop_helper">Выберите магазин или введите новый</string>
    <string name="note_helper">Дополнительные заметки (необязательно)</string>
    <string name="completed_helper">Завершена ли покупка</string>
    <string name="profile_title">Профиль</string>
    <string name="profile_fio_placeholder">Равилова Дарья Анатольевна</string>
    <string name="profile_email_placeholder">ivan@example.com</string>
    <string name="profile_avatar">Аватар пользователя</string>
    <string name="current_limit_title">Текущий лимит</string>
    <string name="no_limit_set">Лимит не установлен</string>
    <string name="set_limit_btn">Установить лимит</string>
    <string name="current_limit_format">Лимит: %s ₽ на %s</string>
    <string name="dialog_set_limit_title">Установить лимит</string>
    <string name="dialog_save_limit">Сохранить</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="error_empty_fields">Заполните все поля</string>
    <string name="add_purchase_title">Добавить покупку</string>
    <string name="limit_saved_success">Лимит %s ₽ на %s установлен</string>
    <string name="error_generic">Ошибка сервера</string>
    <string name="error_network">Ошибка сети: %s</string>

</resources>
